--- a/src/components/SectionHero.astro
+++ b/src/components/SectionHero.astro
@@ -2,6 +2,19 @@
 import heroImgMain from "../assets/images/desktop/index/hero-section.png";
 import heroImgSub from "../assets/images/desktop/blog/about-section.png";
 
+// const { blogDate, blogIndex, blogTitle, blogTag } = Astro.props;
+
+// Top Post
+const section = "Blog";
+const sectionDesc = "前端工程師 & 職涯諮詢師";
+const postDate = "2024/10/21";
+const postIndex = "前端開發 x 職涯成長";
+const postCat = "{postCat}";
+const postTitle = "自學前端不用怕：從零開始的三大關鍵";
+const postText =
+	"嗨，我是 Alyse，一名前端工程師兼職涯諮詢師。一直以來，我都很喜歡在部落格分享學習與工作心得，也常有讀者問：「我想轉職/自學前端，該從哪裡開始？」其實自學的過程既自由又具挑戰性。我整理了三大關鍵，幫助你在短期內建立紮實基礎，並快速累積實戰經驗。希望能替你的前端之路帶來一些啟發與動力！";
+const postLink = "javascript:;";
+const postButtonText = "閱讀內文";
 ---
 
 <div class="hero section-hero">
@@ -11,8 +24,8 @@ import heroImgSub from "../assets/images/desktop/blog/about-section.png";
 		</div>
 		<div class="col hero-main-text-wrap">
 			<div class="hero-main-text">
-				<h1>BLOG</h1>
-				<p class="h3">前端工程師 & 職涯諮詢師</p>
+				<h1>{section}</h1>
+				<p class="h3">{sectionDesc}</p>
 			</div>
 		</div>
 	</div>
@@ -22,13 +35,11 @@ import heroImgSub from "../assets/images/desktop/blog/about-section.png";
 		</div>
 		<div class="col card no-bg">
 			<div class="card-body">
-				<div class="blog-item-date">2024/10/21</div>
-				<div class="blog-item-index">前端開發 x 職涯成長<span class="blog-item-cat">最新文章</span></div>
-				<h2>自學前端不用怕：從零開始的三大關鍵</h2>
-				<p class="blog-item-text">
-					嗨，我是 Alyse，一名前端工程師兼職涯諮詢師。一直以來，我都很喜歡在部落格分享學習與工作心得，也常有讀者問：「我想轉職/自學前端，該從哪裡開始？」其實自學的過程既自由又具挑戰性。我整理了三大關鍵，幫助你在短期內建立紮實基礎，並快速累積實戰經驗。希望能替你的前端之路帶來一些啟發與動力！
-				</p>
-				<a class="button" href="javascript:;">閱讀內文</a>
+				<div class="blog-item-date">{postDate}</div>
+				<div class="blog-item-index">{postIndex}<span class="blog-item-cat">{postCat}</span></div>
+				<h2>{postTitle}</h2>
+				<p class="blog-item-text">{postText}</p>
+				<a class="button" href={postLink}>{postButtonText}</a>
 			</div>
 		</div>
 	</div>
