update folder structuce

--- a/src/components/BlogDetailsHero.astro
+++ b/src/components/BlogDetailsHero.astro
@@ -4,9 +4,9 @@ import heroImgMain from "../assets/images/desktop/index/hero-section.png";
 // const blogDate = "2024/10/21";
 // const blogIndex = "前端開發 x 職涯成長";
 // const blogTitle = "自學前端不用怕：從零開始的三大關鍵";
-// const blogTag = "最新文章";
+// const blogCat = "最新文章";
 
-const { blogDate, blogIndex, blogTitle, blogTag } = Astro.props;
+const { blogDate, blogIndex, blogTitle, blogCat } = Astro.props;
 
 ---
 
@@ -18,7 +18,9 @@ const { blogDate, blogIndex, blogTitle, blogTag } = Astro.props;
 		<div class="col card no-bg">
 			<div class="card-body">
 				<div class="blog-item-date">{blogDate}</div>
-				<div class="blog-item-index">{blogIndex}<span class="blog-item-cat">{blogTag}</span></div>
+				<div class="blog-item-index">{blogIndex}
+          {blogCat && <span class="blog-item-cat">{blogCat}</span>}
+        </div>
 				<h1>{blogTitle}</h1>
 			</div>
 		</div>
