--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,30 @@
 ---
+import { Image } from "astro:assets";
 import Layout from "../layouts/SectionLayout.astro";
 import Hero from "../components/SectionHero.astro";
 import "../assets/style/hero.css";
 
 import posts from "../assets/js/post.json";
 
+async function getImage(imgSrc) {
+	try {
+		const image = await import(`/src/assets/images/${imgSrc}`);
+		return image.default;
+	} catch (error) {
+		return null;
+	}
+}
+
+const blogItems = await Promise.all(
+	posts.map(async (post) => ({
+		...post,
+		image: await getImage(post.imgSrc),
+	}))
+);
+
 const title = "Blog";
 const description = "前端工程師 & 職涯諮詢師";
 const keywords = "前端,工程師,職涯,諮詢師,部落格,學習,分享";
-
 ---
 
 <Layout title={title} description={description} keywords={keywords}>
@@ -22,12 +38,12 @@ const keywords = "前端,工程師,職涯,諮詢師,部落格,學習,分享";
 			</form>
 			<ul class="card-list">
 				{
-					posts.map(({ imgSrc, date, index, title, text, buttonText, link }, idx) => {
+					blogItems.map(({ image, date, index, title, text, buttonText, link }, idx) => {
 						return (
 							idx !== 0 && (
 								<li class="card" data-key={idx}>
 									<div class="card-header">
-										<img class="cover-img" src={imgSrc} alt="" />
+										{image && <Image class="cover-img" src={image} alt={title} />}
 									</div>
 									<div class="card-body">
 										<div class="blog-item-date">{date}</div>
