test update speed

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -22,7 +22,7 @@ const blogItems = await Promise.all(
 	}))
 );
 
-const title = "Blog";
+const title = "部落格";
 const description = "前端工程師 & 職涯諮詢師";
 const keywords = "前端,工程師,職涯,諮詢師,部落格,學習,分享";
 ---
