--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -131,7 +131,7 @@ const socialLinks = [
 						return (
 							<li class="service-item">
 								<span class="img">
-									<Image src={imgSrc} alt={title} class:list={["services-bg"]} />
+									<Image src={imgSrc} alt={title} width={300} height={200} class:list={["services-bg"]} />
 								</span>
 								<span class="text">
 									<h3>{title}</h3>
