test image path

--- a/src/components/HomeHero.astro
+++ b/src/components/HomeHero.astro
@@ -1,7 +1,8 @@
 ---
 import "../assets/style/hero.css";
 
-import homeHeroImg from "../assets/images/desktop/index/hero-section.png";
+// import homeHeroImg from "/images/desktop/index/hero-section.png";
+import homeHeroImg from "../../public/images/desktop/index/hero-section.png";
 ---
 
 <div class="home hero">
