--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -3,7 +3,7 @@
 
 @font-face {
   font-family: 'Noto Sans TC';
-  src: url('/src/assets/font/NotoSansTC-Regular.ttf') format('trueType');
+  src: url('/font/NotoSansTC-Regular.ttf') format('trueType');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -11,7 +11,7 @@
 
 @font-face {
   font-family: 'Noto Sans TC';
-  src: url('/src/assets/font/NotoSansTC-Medium.ttf') format('trueType');
+  src: url('/font/NotoSansTC-Medium.ttf') format('trueType');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -19,7 +19,7 @@
 
 @font-face {
   font-family: 'Noto Sans TC';
-  src: url('/src/assets/font/NotoSansTC-Bold.ttf') format('trueType');
+  src: url('/font/NotoSansTC-Bold.ttf') format('trueType');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -27,7 +27,7 @@
 
 @font-face {
   font-family: 'Noto Sans TC';
-  src: url('/src/assets/font/NotoSansTC-ExtraBold.ttf') format('trueType');
+  src: url('/font/NotoSansTC-ExtraBold.ttf') format('trueType');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
