test image path

--- a/src/components/BlogDetailsHero.astro
+++ b/src/components/BlogDetailsHero.astro
@@ -1,5 +1,5 @@
 ---
-import heroImgMain from "../images/desktop/index/hero-section.png";
+import heroImgMain from "../../public/images/desktop/index/hero-section.png";
 const { blogDate, blogIndex, blogTitle, blogCat } = Astro.props;
 
 ---
