--- a/src/components/SectionHero.astro
+++ b/src/components/SectionHero.astro
@@ -1,8 +1,6 @@
 ---
-import heroImgMain from "../assets/images/desktop/index/hero-section.png";
-import heroImgSub from "../assets/images/desktop/blog/about-section.png";
-
-// const { blogDate, blogIndex, blogTitle, blogTag } = Astro.props;
+import heroImgMain from "../../public/images/desktop/index/hero-section.png";
+import heroImgSub from "../../public/images/desktop/blog/about-section.png";
 
 // Section Title
 const section = "Blog";
