--- a/src/pages/blogs/blog12.astro
+++ b/src/pages/blogs/blog12.astro
@@ -1,4 +1,6 @@
 ---
+// @ts-nocheck
+import { Image } from "astro:assets";
 import Layout from "../../layouts/SectionLayout.astro";
 import Hero from "../../components/BlogDetailsHero.astro";
 import "../../assets/style/hero.css";
@@ -27,7 +29,7 @@ const keywords = "前端,工程師,職涯,諮詢師,部落格,學習,分享";
 				</p>
 			</div>
 			<div class="blog-content-row">
-				<img src="/src/assets/images/desktop/blog-content/content1.png" alt="" />
+				<img src="/images/desktop/blog-content/content1.png" alt="" />
 				<h2 class="h3 text-primary">打好基礎：HTML、CSS、JavaScript</h2>
 				<h3 class="h4">HTML 與語意化</h3>
 				<p>
