--- a/src/pages/blogs/blog10.astro
+++ b/src/pages/blogs/blog10.astro
@@ -1,4 +1,6 @@
 ---
+// @ts-nocheck
+import { Image } from "astro:assets";
 import Layout from "../../layouts/SectionLayout.astro";
 import Hero from "../../components/BlogDetailsHero.astro";
 import "../../assets/style/hero.css";
@@ -8,7 +10,6 @@ const blogDate = "2024/10/21";
 const blogIndex = "前端開發 x 職涯成長";
 const blogTitle = "自學前端不用怕：從零開始的三大關鍵";
 const blogCat = "最新文章";
-
 ---
 
 <Layout>
@@ -24,7 +25,7 @@ const blogCat = "最新文章";
 				</p>
 			</div>
 			<div class="blog-content-row">
-				<img src="/src/assets/images/desktop/blog-content/content1.png" alt="" />
+				<img src="/images/desktop/blog-content/content1.png" alt="" />
 				<h2 class="h3 text-primary">打好基礎：HTML、CSS、JavaScript</h2>
 				<h3 class="h4">HTML 與語意化</h3>
 				<p>
