update static content

--- a/src/pages/blogs/blog10.astro
+++ b/src/pages/blogs/blog10.astro
@@ -6,10 +6,10 @@ import Hero from "../../components/BlogDetailsHero.astro";
 import "../../assets/style/hero.css";
 
 const blogId = 10;
-const blogDate = "2024/10/21";
-const blogIndex = "前端開發 x 職涯成長";
-const blogTitle = "自學前端不用怕：從零開始的三大關鍵";
-const blogCat = "最新文章";
+const blogDate = "2024/09/07";
+const blogIndex = "作品集 x 求職攻略";
+const blogTitle = "前端作品集打造指南：讓你的專案成為履歷亮點";
+const blogCat = "";
 ---
 
 <Layout>
