--- a/src/pages/blogs/blog11.astro
+++ b/src/pages/blogs/blog11.astro
@@ -7,7 +7,7 @@ import "../../assets/style/hero.css";
 
 const blogId = 11;
 const blogDate = "2024/10/21";
-const blogIndex = "#React #入門基礎";
+const blogIndex = "React x 入門基礎";
 const blogTitle = "React 入門不再迷惘：三步驟帶你上手核心概念";
 const blogCat = "";
 ---
