--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 const navs = [
 	{ name: "首頁", href: "/" },
-	{ name: "部落格", href: "/blog" },
+	{ name: "部落格", href: "/blogs" },
 ];
 ---
 
@@ -9,8 +9,6 @@ const navs = [
 	<div class="container">
 		<nav class="nav">
 			<ul>
-				<!-- <li class="nav-item"><a class="nav-link" href="/">首頁</a></li> -->
-				<!-- <li class="nav-item"><a class="nav-link" href="./blog.html">部落格</a></li> -->
 				{
 					navs.map((nav) => {
 						return (
