test mail service

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -335,3 +335,17 @@ function getImageSrc(imgPath) {
 		});
 	}
 </script>
+
+<script id="mcjs">
+	!(function (c, h, i, m, p) {
+		(m = c.createElement(h)),
+			(p = c.getElementsByTagName(h)[0]),
+			(m.async = 1),
+			(m.src = i),
+			p.parentNode.insertBefore(m, p);
+	})(
+		document,
+		"script",
+		"https://chimpstatic.com/mcjs-connected/js/users/b7c450b5cc3bd37a96c7442a6/7ab4291aa4b3282672495d4c9.js"
+	);
+</script>
