--- a/src/assets/style/hero.css
+++ b/src/assets/style/hero.css
@@ -95,6 +95,7 @@
 }
 
 @media (max-width: 991.98px) {
+
   .hero .container {
     padding: 0 .75rem;
   }
@@ -103,9 +104,13 @@
     padding: 2.5rem 1.5rem;
     margin-top: 0;
   }
-
+  
   .hero .intro .h3 {
     font-size: 1.5rem;
+  }
+
+  .hero.section-hero .row .col:last-child {
+    padding: 1.5rem;
   }
 
   .hero.section-hero .row.row-title .col:last-child {
