--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -63,9 +63,14 @@ body {
 }
 
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 h1,
